working on spine sort with connected components

--- a/src/report/report.tex
+++ b/src/report/report.tex
@@ -1,14 +1,40 @@
 \documentclass{scrartcl}
 
-\author{Alexander Eisl, Peter Wiedermann}
+\author{Alexander Eisl (0250266), Peter Wiedermann}
 
 \date{\today}
 
 
 \title{Heuristic Optimization Techniques \\ Exercise 1}
 
-
 \begin{document}
 \maketitle
+
+
+\section{Deterministic Construction Heuristic}
+% Just a few sketches, needs to be rewritten
+In this section, we present the algorithm used for the determinstic
+construction heuristic. 
+
+\begin{enumerate}
+  \item Construct a spine order which we suppose to give a small number 
+    of crossings.
+\end{enumerate}
+
+
+
+\begin{enumerate}
+  \item Find optimal vertex order
+  \item Assign edges to pages
+\end{enumerate}
+
+%% should we include some pseudo-code?
+
+\section{Now add some randomness...}
+
+
+\section{Discussion}
+
+
 
 \end{document}
