--- a/src/report/resultsTable.tex
+++ b/src/report/resultsTable.tex
@@ -1,15 +1,10 @@
-% latex table generated in R 3.0.2 by xtable 1.7-4 package
-% Sat Oct 24 17:16:12 2015
-\begin{tabular}{lrrrr}
-  \toprule   & \multicolumn{2}{c}{Objective} & \multicolumn{2}{c}{Runtime} \\ & avg & sd & avg & sd \\ 
-  \midrule automatic-1.txt & 19.00 & 0.00 & 0.00 & 0.00 \\ 
-  automatic-2.txt & 48.00 & 0.00 & 0.00 & 0.00 \\ 
-  automatic-3.txt & 138.21 & 12.43 & 0.00 & 0.00 \\ 
-  automatic-4.txt & 161.00 & 0.00 & 0.00 & 0.00 \\ 
-  automatic-5.txt & 77.00 & 0.00 & 0.00 & 0.00 \\ 
-  automatic-6.txt & 5,569,842.38 & 164,165.90 & 51.44 & 0.78 \\ 
-  automatic-7.txt & 142,999.17 & 750.69 & 0.43 & 0.00 \\ 
-  automatic-8.txt & 554,221.83 & 10,867.73 & 10.16 & 0.03 \\ 
-  automatic-9.txt & 1,226,088.38 & 50,718.80 & 11.38 & 0.07 \\ 
-  automatic-10.txt & 54,350.76 & 1,353.34 & 3.37 & 0.04 \\ 
+% latex table generated in R 2.15.1 by xtable 1.5-6 package
+% Sun Oct 25 11:09:42 2015
+\begin{tabular}{l|rrr|rrr|}
+  \toprule   & \multicolumn{2}{c}{Objective} & \multicolumn{2}{c}{Runtime} \\ & min & avg & sd & min & avg & sd \\ 
+  \midrule automatic-1.txt & 17.00 & 17.24 & 0.43 & 0.00 & 0.00 & 0.00 \\ 
+  automatic-2.txt & 48.00 & 48.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
+  automatic-3.txt & 152.00 & 152.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
+  automatic-4.txt & 169.00 & 169.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
+  automatic-5.txt & 74.00 & 74.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
    \bottomrule \end{tabular}
