--- a/src/report/representationTab.tex
+++ b/src/report/representationTab.tex
@@ -14,6 +14,7 @@ the number of crossings efficiently we use an additional spine order map.\\
 \end{tabular}
 
 \caption{This table shows structure of our solution.}
+\label{tab:sol}
 \end{table}
 
 
