further mods on report

--- a/src/report/report.tex
+++ b/src/report/report.tex
@@ -163,9 +163,7 @@ solution candidates.
 
 \centering
 \input{resultsTable}
-\caption{This table shows the results of our randomized construction heuristic. The first two
-columns show the mean and standard deviation of the number of crossings, the last two columns
-show the mean and standard deviation of the runtime in seconds.}
+\caption{This table shows the results of our randomized construction heuristic.}
 \label{tab:results}
 \end{table}
 
