new run of randomized algorithms. updated report; corrected some typos and other minor language issues.

--- a/src/report/representationTab.tex
+++ b/src/report/representationTab.tex
@@ -7,13 +7,13 @@
 Pages & Array & Number of pages is constant; allows direct access to each element \\
 Page & List of edges & dynamic; only sequential access needed; each time we add an edge we incrementally update the number of crossings \\
 Spine Order & Array & does not change often in our implementation; easy access. To be able to calculate
-the number of crossings efficiently we use an additional spine order map.\\
+the number of crossings efficiently, we use an additional spine-order map.\\
 
 \bottomrule 
 
 \end{tabular}
 
-\caption{This table shows structure of our solution.}
+\caption{This table shows the structure of our solution.}
 \label{tab:sol}
 \end{table}
 
