--- a/src/report/resultsTable.tex
+++ b/src/report/resultsTable.tex
@@ -1,10 +1,15 @@
-% latex table generated in R 2.15.1 by xtable 1.5-6 package
-% Sun Oct 25 11:09:42 2015
+% latex table generated in R 3.0.2 by xtable 1.7-4 package
+% Sun Oct 25 12:32:15 2015
 \begin{tabular}{l|rrr|rrr|}
-  \toprule   & \multicolumn{2}{c}{Objective} & \multicolumn{2}{c}{Runtime} \\ & min & avg & sd & min & avg & sd \\ 
-  \midrule automatic-1.txt & 17.00 & 17.24 & 0.43 & 0.00 & 0.00 & 0.00 \\ 
+  \toprule   & \multicolumn{3}{c}{Crossings} & \multicolumn{3}{c}{Runtime} \\ & min & avg & sd & min & avg & sd \\ 
+  \midrule automatic-1.txt & 17.00 & 17.97 & 0.18 & 0.00 & 0.00 & 0.00 \\ 
   automatic-2.txt & 48.00 & 48.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
   automatic-3.txt & 152.00 & 152.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
-  automatic-4.txt & 169.00 & 169.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
+  automatic-4.txt & 181.00 & 181.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
   automatic-5.txt & 74.00 & 74.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
+  automatic-6.txt & 5,146,883.00 & 5,543,757.41 & 127,168.49 & 50.14 & 52.39 & 3.47 \\ 
+  automatic-7.txt & 141,516.00 & 143,304.17 & 783.35 & 0.43 & 0.43 & 0.00 \\ 
+  automatic-8.txt & 522,514.00 & 551,906.28 & 10,771.76 & 10.13 & 10.23 & 0.13 \\ 
+  automatic-9.txt & 1,105,586.00 & 1,234,003.31 & 44,577.44 & 11.29 & 11.40 & 0.13 \\ 
+  automatic-10.txt & 51,835.00 & 54,339.69 & 1,193.40 & 3.34 & 3.39 & 0.07 \\ 
    \bottomrule \end{tabular}
