added avg error

--- a/src/report2/report2.tex
+++ b/src/report2/report2.tex
@@ -182,10 +182,24 @@ local optimum with less improvement to a random solution itself.
 
 
 % TODO:
-%When we compare the results with a random initial solution we could
-%measure an avg increase of XXX crossings 
-%\footnote{measured with 1-node flip and first stepfunction}.
+When we compare the results with a random initial solution we could
+measure an avg increase of 55\% crossings
+\footnote{measured with 1-node flip and \texttt{first} stepfunction}.
+%
 
+%instance    lsr-1node-first-rand    lsr-1node-first-init    sub         
+%automatic-1.txt 21  21  0           
+%automatic-2.txt 83  48  35  0.7291666667        
+%automatic-3.txt 147 115 32  0.2782608696        
+%automatic-4.txt 119 124 5   0.0403225806        
+%automatic-5.txt 109 72  37  0.5138888889        
+%automatic-6.txt 7524000 6153059 1370941 0.2228064122        
+%automatic-7.txt 162956  141307  21649   0.1532054321        
+%automatic-8.txt 1046196 573668  472528  0.8236959356        
+%automatic-9.txt 1547842 1273071 274771  0.2158332096        
+%automatic-10.txt    201019  56775   144244  2.5406252752        
+%                                            5.5178052706    10  0.5517805271
+%
 
 % OLD:
 
